--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="img/icon/icon.png" type="image/*" />
     <title>Portfólio de João Luciano</title>
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img src="img/icon/icon.png" alt="logo" />
+      <nav>
+        <a href="">Habilidades</a>
+        <a href="">Certificados</a>
+        <a href="">Projetos</a>
+        <a href="">Contato</a>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <div>
+          <h1>Portfólio de João Luciano</h1>
+          <h2>Desenvolvedor Web Front-End Júnior</h2>
+        </div>
+        <img src="img/jlsd.jpg" alt="Foto de João Luciano" />
+      </section>
+      <section>
+        <h3>
+          Aqui é mencionado tais habilidades, certificados e seus projetos
+          prontos, também entre em contato!
+        </h3>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
