--- a/index.html
+++ b/index.html
@@ -19,20 +19,22 @@
       </nav>
     </header>
     <main>
-      <section>
+      <section id="sect-pri">
         <div>
           <h1>Portfólio de João Luciano</h1>
           <h2>Desenvolvedor Web Front-End Júnior</h2>
         </div>
         <img src="img/jlsd.jpg" alt="Foto de João Luciano" />
       </section>
-      <section>
+      <section id="sect-sec">
         <h3>
           Aqui é mencionado tais habilidades, certificados e seus projetos
           prontos, também entre em contato!
         </h3>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <img src="img/JL-logo.svg" alt="logo-text" />
+    </footer>
   </body>
 </html>
