--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap"
+      rel="stylesheet"
+    />
     <link rel="shortcut icon" href="img/icon/icon.png" type="image/*" />
     <title>Portfólio de João Luciano</title>
     <link rel="stylesheet" href="css/style.css" />
@@ -12,7 +18,7 @@
     <header>
       <img src="img/icon/icon.png" alt="logo" />
       <nav>
-        <a href="">Habilidades</a>
+        <a href="#habilidades">Habilidades</a>
         <a href="">Certificados</a>
         <a href="">Projetos</a>
         <a href="">Contato</a>
@@ -31,6 +37,16 @@
           Aqui é mencionado tais habilidades, certificados e seus projetos
           prontos, também entre em contato!
         </h3>
+        <div id="habilidades">
+          <h2>Habilidades:</h2>
+          <p>
+            Tenho conhecimento sólido com HTML, CSS, JavaScript, e TypeScript.
+            Atualmente aprendi no curso online do OneBitCode de FullStack
+            JavaScript Profissional, e estou a aprender mais tecnologias com
+            este curso.
+          </p>
+        </div>
+        <div id="certificados"></div>
       </section>
     </main>
     <footer>
