--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
         <div id="habilidades">
           <h2>Habilidades:</h2>
           <p>
-            Tenho conhecimento sólido com HTML, CSS, JavaScript, e TypeScript.
-            Atualmente aprendi no curso online do OneBitCode de FullStack
-            JavaScript Profissional, e estou a aprender mais tecnologias com
-            este curso.
+            Tenho conhecimento sólido com
+            <abbr title="HyperText Markup Language">HTML</abbr>,
+            <abbr title="Cascading Style Sheets">CSS</abbr>, JavaScript, e
+            TypeScript. Atualmente aprendi no curso online do OneBitCode de
+            FullStack JavaScript Profissional, e estou a aprender mais
+            tecnologias com este curso.
           </p>
         </div>
         <div id="certificados"></div>
