Adição de certificados

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img src="img/icon/icon.png" alt="logo" />
       <nav>
         <a href="#habilidades">Habilidades</a>
-        <a href="">Certificados</a>
+        <a href="#certificados">Certificados</a>
         <a href="">Projetos</a>
         <a href="">Contato</a>
       </nav>
@@ -48,7 +48,46 @@
             tecnologias com este curso.
           </p>
         </div>
-        <div id="certificados"></div>
+        <div id="certificados">
+          <h2>Certificados</h2>
+          <section>
+            <figure id="htmlCard">
+              <img
+                src="img/certificado_onebitcode_html5.jpg"
+                alt="certificado HTML"
+              />
+              <figcaption>Certificado HTML - OneBitCode</figcaption>
+            </figure>
+            <figure id="cssCard">
+              <img
+                src="img/certificado_onebitcode_css3.jpg"
+                alt="certificado CSS"
+              />
+              <figcaption>Certificado CSS - OneBitCode</figcaption>
+            </figure>
+            <figure id="jsCard">
+              <img
+                src="img/certificado_onebitcode_javascript.jpg"
+                alt="certificado JavaScript"
+              />
+              <figcaption>Certificado JavaScript - OneBitCode</figcaption>
+            </figure>
+            <figure id="tsCard">
+              <img
+                src="img/certificado_onebitcode_typescript.jpg"
+                alt="certificado TypeScript"
+              />
+              <figcaption>Certificado TypeScript - OneBitCode</figcaption>
+            </figure>
+            <figure id="cssmodernoCard">
+              <img
+                src="img/certificado_onebitcode_css-moderno_page-0001.jpg"
+                alt="certificado CSS Moderno"
+              />
+              <figcaption>Certificado CSS Moderno - OneBitCode</figcaption>
+            </figure>
+          </section>
+        </div>
       </section>
     </main>
     <footer>
