Adição de projetos e rolamento suave

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <nav>
         <a href="#habilidades">Habilidades</a>
         <a href="#certificados">Certificados</a>
-        <a href="">Projetos</a>
-        <a href="">Contato</a>
+        <a href="#projetos">Projetos</a>
+        <a href="#">Contato</a>
       </nav>
     </header>
     <main>
@@ -49,7 +49,7 @@
           </p>
         </div>
         <div id="certificados">
-          <h2>Certificados</h2>
+          <h2>Certificados:</h2>
           <section>
             <figure id="htmlCard">
               <img
@@ -86,6 +86,53 @@
               />
               <figcaption>Certificado CSS Moderno - OneBitCode</figcaption>
             </figure>
+          </section>
+        </div>
+        <div id="projetos">
+          <h2>Projetos feitos:</h2>
+          <section>
+            <a
+              href="https://joaoluciano1429.github.io/br-sa-hinosglobo.github.io/"
+            >
+              <picture>
+                <img
+                  src="img/screencapture-joaoluciano1429-github-io-br-sa-hinosglobo-github-io.png"
+                  alt="brasileirão hinos Globo série A"
+                />
+                <p>Hinos Globo SP - Brasileirão Série A</p>
+              </picture>
+            </a>
+            <a
+              href="https://joaoluciano1429.github.io/br-sb-hinosglobo.github.io/"
+            >
+              <picture>
+                <img
+                  src="img/screencapture-joaoluciano1429-github-io-br-sb-hinosglobo-github-io.png"
+                  alt="brssileirão hinos Globo série B"
+                />
+                <p>Hinos Globo SP - Brasileirão Série B</p>
+              </picture>
+            </a>
+            <a
+              href="https://joaoluciano1429.github.io/paginainicial.github.io/"
+            >
+              <picture>
+                <img
+                  src="img/screencapture-joaoluciano1429-github-io-paginainicial-github-io.png"
+                  alt="página inicial"
+                />
+                <p>Página Inicial</p>
+              </picture>
+            </a>
+            <a href="https://joaoluciano1429.github.io/meucurriculo.github.io/">
+              <picture destaque>
+                <img
+                  src="img/screencapture-joaoluciano1429-github-io-meucurriculo-github-io.jpeg"
+                  alt="meu currículo"
+                />
+                <p>Meu currículo</p>
+              </picture>
+            </a>
           </section>
         </div>
       </section>
