--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <h2>Entre em contato:</h2>
         <form
           id="contact-form"
-          action="https://formspree.io/f/meqyrong"
+          action="https://formspree.io/f/xqkryanr"
           method="POST"
         >
           <label for="name">Nome:</label>
