Adicionado certificado de GIT e GitHub

--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
               />
               <figcaption>Certificado CSS Moderno - OneBitCode</figcaption>
             </figure>
+            <figure id="gitGithubCard">
+              <img
+                src="img/certificado_onebitcode_gitgithub_page-0001.jpg"
+                alt="certificado GIT e GitHub"
+              />
+              <figcaption>Certificado GIT e GitHub - OneBitCode</figcaption>
+            </figure>
           </section>
         </div>
         <div id="projetos">
