--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <a href="https://joaoluciano1429.github.io/meucurriculo.github.io/">
               <picture destaque>
                 <img
-                  src="img/screencapture-joaoluciano1429-github-io-meucurriculo-github-io.jpeg"
+                  src="img/Screenshot 2024-06-02 at 15-59-32 Currículo de João Luciano Salim Drumond.png"
                   alt="meu currículo"
                 />
                 <p>Meu currículo</p>
