Adicionado certificado de Sass Adicionado links externos

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a href="#habilidades">Habilidades</a>
         <a href="#certificados">Certificados</a>
         <a href="#projetos">Projetos</a>
+        <a href="#linksExternos">Links externos</a>
         <a href="#contato">Contato</a>
       </nav>
     </header>
@@ -42,10 +43,12 @@
           <p>
             Tenho conhecimento sólido com
             <abbr title="HyperText Markup Language">HTML</abbr>,
-            <abbr title="Cascading Style Sheets">CSS</abbr>, JavaScript, e
-            TypeScript. Atualmente aprendi no curso online do OneBitCode de
-            FullStack JavaScript Profissional, e estou a aprender mais
-            tecnologias com este curso.
+            <abbr title="Cascading Style Sheets">CSS</abbr>, JavaScript,
+            TypeScript, e
+            <abbr title="Syntactically Awesome Style Sheets">Sass</abbr>.
+            Atualmente aprendi no curso online do OneBitCode de FullStack
+            JavaScript Profissional, e estou a aprender mais tecnologias com
+            este curso.
           </p>
         </div>
         <div id="certificados">
@@ -93,6 +96,13 @@
               />
               <figcaption>Certificado GIT e GitHub - OneBitCode</figcaption>
             </figure>
+            <figure id="sassCard">
+              <img
+                src="img/certificado_onebitcode_sass_pages-to-jpg-0001.jpg"
+                alt="certificado Sass"
+              />
+              <figcaption>Certificado Sass - OneBitCode</figcaption>
+            </figure>
           </section>
         </div>
         <div id="projetos">
@@ -139,6 +149,23 @@
                 />
                 <p>Meu currículo</p>
               </picture>
+            </a>
+          </section>
+        </div>
+        <div id="linksExternos">
+          <h2>Links externos:</h2>
+          <section>
+            <a href="https://www.linkedin.com/in/joaolucianosd/">
+              <button type="button" id="linkedinBtn">
+                <img src="img/icon/linkedin-svgrepo-com.svg" />
+                <span>LinkedIn</span>
+              </button>
+            </a>
+            <a href="https://github.com/JoaoLuciano1429">
+              <button type="button" id="githubBtn">
+                <img src="img/icon/GitHub_Invertocat_Logo.svg" />
+                <span>GitHub</span>
+              </button>
             </a>
           </section>
         </div>
