--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     />
     <link rel="shortcut icon" href="img/icon/icon.png" type="image/*" />
     <title>Portfólio de João Luciano</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="css/responsive.css" type="text/css" />
     <script src="js/script.js" defer></script>
   </head>
   <body>
