Adicionado Certificado de BootStrap

--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
               />
               <figcaption>Certificado Sass - OneBitCode</figcaption>
             </figure>
+            <figure id="bootstrapCard">
+              <img
+                src="img/certificado_onebitcode_bootstrap_page-0001.jpg"
+                alt="certificado BootStrap"
+              />
+              <figcaption>Certificado BootStrap - OneBitCode</figcaption>
+            </figure>
           </section>
         </div>
         <div id="projetos">
