--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section id="sect-pri">
         <div>
           <h1>Portfólio de João Luciano</h1>
-          <h2>Desenvolvedor Web Front-End Júnior</h2>
+          <h2>Desenvolvedor Web Front-End Estagiário</h2>
         </div>
         <img src="img/jlsd.jpg" alt="Foto de João Luciano" />
       </section>
@@ -45,11 +45,11 @@
             Tenho conhecimento sólido com
             <abbr title="HyperText Markup Language">HTML</abbr>,
             <abbr title="Cascading Style Sheets">CSS</abbr>, JavaScript,
-            TypeScript, e
-            <abbr title="Syntactically Awesome Style Sheets">Sass</abbr>.
-            Atualmente aprendi no curso online do OneBitCode de FullStack
-            JavaScript Profissional, e estou a aprender mais tecnologias com
-            este curso.
+            TypeScript,
+            <abbr title="Syntactically Awesome Style Sheets">Sass</abbr>, e
+            Bootstrap. Atualmente aprendi no curso online do OneBitCode de
+            FullStack JavaScript Profissional, e estou a aprender mais
+            tecnologias com este curso.
           </p>
         </div>
         <div id="certificados">
