Adicionado Certificado de React

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             <abbr title="HyperText Markup Language">HTML</abbr>,
             <abbr title="Cascading Style Sheets">CSS</abbr>, JavaScript,
             TypeScript,
-            <abbr title="Syntactically Awesome Style Sheets">Sass</abbr>, e
-            Bootstrap. Atualmente aprendi no curso online do OneBitCode de
-            FullStack JavaScript Profissional, e estou a aprender mais
+            <abbr title="Syntactically Awesome Style Sheets">Sass</abbr>,
+            Bootstrap, e React. Atualmente aprendi no curso online do OneBitCode
+            de FullStack JavaScript Profissional, e estou a aprender mais
             tecnologias com este curso.
           </p>
         </div>
@@ -110,6 +110,13 @@
                 alt="certificado BootStrap"
               />
               <figcaption>Certificado BootStrap - OneBitCode</figcaption>
+            </figure>
+            <figure id="reactCard">
+              <img
+                src="img/certificado_onebitcode_react_page-0001.jpg"
+                alt="certificado Fundamentos do React"
+              />
+              <figcaption>Certificado Fundamentos do React - OneBitCode/figcaption>
             </figure>
           </section>
         </div>
