--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 src="img/certificado_onebitcode_react_page-0001.jpg"
                 alt="certificado Fundamentos do React"
               />
-              <figcaption>Certificado Fundamentos do React - OneBitCode/figcaption>
+              <figcaption>Certificado Fundamentos do React - OneBitCode</figcaption>
             </figure>
           </section>
         </div>
