--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
                 src="img/certificado_onebitcode_react_page-0001.jpg"
                 alt="certificado Fundamentos do React"
               />
-              <figcaption>Certificado Fundamentos do React - OneBitCode</figcaption>
+              <figcaption>
+                Certificado Fundamentos do React - OneBitCode
+              </figcaption>
             </figure>
           </section>
         </div>
@@ -128,7 +130,7 @@
             >
               <picture>
                 <img
-                  src="img/screencapture-joaoluciano1429-github-io-br-sa-hinosglobo-github-io.png"
+                  src="img/serie-a.png"
                   alt="brasileirão hinos Globo série A"
                 />
                 <p>Hinos Globo SP - Brasileirão Série A</p>
@@ -139,8 +141,8 @@
             >
               <picture>
                 <img
-                  src="img/screencapture-joaoluciano1429-github-io-br-sb-hinosglobo-github-io.png"
-                  alt="brssileirão hinos Globo série B"
+                  src="img/serie-b.png"
+                  alt="brasileirão hinos Globo série B"
                 />
                 <p>Hinos Globo SP - Brasileirão Série B</p>
               </picture>
@@ -163,6 +165,18 @@
                   alt="meu currículo"
                 />
                 <p>Meu currículo</p>
+              </picture>
+            </a>
+            <a
+              href="https://joaoluciano1429.github.io/discografia-leandro-leonardo.github.io/"
+            >
+              <picture>
+                <img
+                  src=""
+                  alt="discografia de Leandro e Leonardo"
+                  id="dynamicSRC"
+                />
+                <p>Discografia de Leandro & Leonardo</p>
               </picture>
             </a>
           </section>
