--- a/index.html
+++ b/index.html
@@ -179,6 +179,17 @@
                 <p>Discografia de Leandro & Leonardo</p>
               </picture>
             </a>
+            <a
+              href="https://joaoluciano1429.github.io/br-sc-hinosglobo.github.io/"
+            >
+              <picture>
+                <img
+                  src="img/serie-c.png"
+                  alt="Hinos Globo SP - Brasileirão Série C"
+                />
+                <p>Hinos Globo SP - Brasileirão Série C</p>
+              </picture>
+            </a>
           </section>
         </div>
         <div id="linksExternos">
