--- a/index.html
+++ b/index.html
@@ -190,6 +190,14 @@
                 <p>Hinos Globo SP - Brasileirão Série C</p>
               </picture>
             </a>
+            <a
+              href="https://joaoluciano1429.github.io/acervo-digital-jlsd.github.io/"
+            >
+              <picture>
+                <img src="img/acervoDeFotos.png" alt="Acervo de Fotos" />
+                <p>Meu Acervo Digital de Fotos</p>
+              </picture>
+            </a>
           </section>
         </div>
         <div id="linksExternos">
