Atualização dos certificados de HTML e CSS; Mais metadados;

--- a/index.html
+++ b/index.html
@@ -3,6 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      property="og:title"
+      content="Portfólio de João Luciano Salim Drumond"
+    />
+    <meta
+      property="og:description"
+      content="Meu portfólio como desenvolvedor front-end em versão página web."
+    />
+    <meta
+      property="og:image"
+      content="https://joaoluciano1429.github.io/meuportfolio.github.io/img/icon/icon.png"
+    />
+    <meta property="og:image:alt" content="Ícone do website" />
+    <meta
+      property="og:url"
+      content="https://joaoluciano1429.github.io/meuportfolio.github.io/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="GitHub" />
+    <meta property="og:locale" content="pt_BR" />
+    <meta property="og:locale:alternate" content="pt_PT" />
+    <meta name="author" content="JoãoLuciano1429" />
+    <meta name="theme-color" content="#000077" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -56,17 +79,11 @@
           <h2>Certificados:</h2>
           <section>
             <figure id="htmlCard">
-              <img
-                src="img/certificado_onebitcode_html5.jpg"
-                alt="certificado HTML"
-              />
+              <img src="img/HTML_page-0001.jpg" alt="certificado HTML" />
               <figcaption>Certificado HTML - OneBitCode</figcaption>
             </figure>
             <figure id="cssCard">
-              <img
-                src="img/certificado_onebitcode_css3.jpg"
-                alt="certificado CSS"
-              />
+              <img src="img/CSS_page-0001.jpg" alt="certificado CSS" />
               <figcaption>Certificado CSS - OneBitCode</figcaption>
             </figure>
             <figure id="jsCard">
