Atualização da imagem do card do projeto do Currículo

--- a/index.html
+++ b/index.html
@@ -177,10 +177,7 @@
             </a>
             <a href="https://joaoluciano1429.github.io/meucurriculo.github.io/">
               <picture destaque>
-                <img
-                  src="img/Screenshot 2024-06-02 at 15-59-32 Currículo de João Luciano Salim Drumond.png"
-                  alt="meu currículo"
-                />
+                <img src="img/curriculo.png" alt="meu currículo" />
                 <p>Meu currículo</p>
               </picture>
             </a>
