--- a/index.html
+++ b/index.html
@@ -219,13 +219,19 @@
           <section>
             <a href="https://www.linkedin.com/in/joaolucianosd/">
               <button type="button" id="linkedinBtn">
-                <img src="img/icon/linkedin-svgrepo-com.svg" />
+                <img
+                  src="img/icon/linkedin-svgrepo-com.svg"
+                  alt="LinkedIn logo"
+                />
                 <span>LinkedIn</span>
               </button>
             </a>
             <a href="https://github.com/JoaoLuciano1429">
               <button type="button" id="githubBtn">
-                <img src="img/icon/GitHub_Invertocat_Logo.svg" />
+                <img
+                  src="img/icon/GitHub_Invertocat_Logo.svg"
+                  alt="GitHub logo"
+                />
                 <span>GitHub</span>
               </button>
             </a>
@@ -237,39 +243,21 @@
       <img src="img/JL-logo.svg" alt="logo-text" />
       <section id="contato">
         <h2>Entre em contato:</h2>
-        <form
-          id="contact-form"
-          action="https://formspree.io/f/xqkryanr"
-          method="POST"
+
+        <b
+          id="mailLink"
+          data-mail="bWFpbHRvOmx1Y2lhbm9hbmdleXNAZ21haWwuY29t"
+          title="Por questões de segurança, o e-mail não será mostrado diretamente"
         >
-          <label for="name">Nome:</label>
-          <input
-            type="text"
-            id="name"
-            name="name"
-            placeholder="Seu nome"
-            required
-          />
-
-          <label for="email">Email:</label>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            placeholder="Seu email"
-            required
-          />
-
-          <label for="message">Mensagem:</label>
-          <textarea
-            id="message"
-            name="message"
-            placeholder="Texto da mensagem"
-            required
-          ></textarea>
-
-          <button type="submit">Enviar</button>
-        </form>
+          <button type="button">Enviar e-mail</button>
+        </b>
+        <b
+          id="waLink"
+          data-zap="aHR0cHM6Ly93YS5tZS81NTE5OTg2MDY2OTMw"
+          title="Por questões de segurança, o número de telefone WhatsApp não será mostrado diretamente"
+        >
+          <button type="button">Enviar mensagem por WhatsApp</button>
+        </b>
       </section>
     </footer>
   </body>
